<?xml version="1.0" encoding="utf-8"?>



<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->

<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->

<!--xmlns:tools="http://schemas.android.com/tools"-->

<!--android:layout_width="match_parent"-->

<!--android:layout_height="match_parent"-->

<!--tools:context="com.yamani.helloworld.SignupActivity">-->



<!--</android.support.constraint.ConstraintLayout>-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/signupbg">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_input_layout_FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >

        <EditText

            android:id="@+id/signup_input_FirstName"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="text"

            android:hint="First Name" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout

        android:id="@+id/signup_input_layout_LastName"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="10dp">

        <EditText

            android:id="@+id/signup_input_LastName"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="text"

            android:hint="Last Name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/signup_input_layout_email"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="10dp">

        <EditText

            android:id="@+id/signup_input_email"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textEmailAddress"

            android:hint="Email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/signup_input_layout_password"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="10dp">

        <EditText

            android:id="@+id/signup_input_password"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textPassword"

            android:hint="@string/hint_password" />

    </android.support.design.widget.TextInputLayout><android.support.design.widget.TextInputLayout

    android:id="@+id/signup_input_layout_PhoneNumber"

    android:layout_width="match_parent"

    android:layout_height="wrap_content"

    android:layout_centerHorizontal="true"

    android:layout_marginTop="10dp">

    <EditText

        android:id="@+id/signup_input_PhoneNumber"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:ems="10"

        android:inputType="phone"

        android:hint="Phone Number" />

</android.support.design.widget.TextInputLayout>



    <Button android:id="@+id/btn_signup"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:text="@string/btn_sign_up"

        android:background="@color/colorPrimaryDark"

        android:layout_marginTop="40dp"

        android:textColor="@android:color/white"/>

    <Button android:id="@+id/btn_link_login"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:text="@string/btn_link_to_login"

        android:background="@android:color/transparent"

        android:layout_marginTop="10dp"

        android:textColor="@color/colorPrimaryDark"/>

    <ProgressBar

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:id="@+id/progressBar"/>

</LinearLayout>